# claude-agent-framework

./: .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md  README_CN.md  __init__.py  cli.py  pyproject.toml
.claude/commands/: competitive-analysis.md  fact-check.md  market-trends.md  research.md  summarize.md
.claude/skills/pdf/: skill.md
.github/workflows/: publish.yml
architectures/: __init__.py
architectures/critic_actor/: orchestrator.py
architectures/debate/: orchestrator.py
architectures/mapreduce/: config.py  splitter.py
architectures/mapreduce/prompts/: mapper.txt  reducer.txt
architectures/pipeline/: config.py
architectures/pipeline/prompts/: lead_agent.txt  reviewer.txt  tester.txt
architectures/reflexion/: __init__.py  orchestrator.py
architectures/reflexion/prompts/: executor.txt  reflector.txt
architectures/research/: __init__.py  config.py
architectures/research/prompts/: data_analyst.txt  report_writer.txt
architectures/specialist_pool/: router.py
architectures/specialist_pool/prompts/: code_expert.txt  lead_agent.txt  performance_expert.txt  router.txt  security_expert.txt
core/: base.py  registry.py
docs/: BEST_PRACTICES.md  BEST_PRACTICES_CN.md  CONFIG_USAGE.md  PRODUCTION_EXAMPLES_DESIGN.md  PRODUCTION_EXAMPLES_DESIGN_CN.md  PROMPT_WRITING_GUIDE.md  PUBLISH_GUIDE.md  ROLE_BASED_ARCHITECTURE.md  ROLE_BASED_ARCHITECTURE_CN.md  ROLE_PROMPT_LOADING_MECHANISM.md  UV_GUIDE.md
docs/api/: core.md  core_cn.md  plugins.md  plugins_cn.md
docs/dev/: ARCHITECTURE_REFACTORING_PLAN.md  WORK_LOG.md
docs/guides/advanced/: PERFORMANCE_TUNING.md  PERFORMANCE_TUNING_CN.md
docs/guides/architecture_selection/: GUIDE.md  GUIDE_CN.md
docs/guides/customization/: CUSTOM_PLUGINS.md  CUSTOM_PLUGINS_CN.md
examples/: __init__.py  basic_usage.py  custom_agents.py  programmatic_usage.py
examples/production/: README.md  README_CN.md
examples/production/01_competitive_intelligence/: Makefile  PROJECT_SUMMARY.md  README.md  README_CN.md  __init__.py  analyze_data.py  config.yaml  generate_pdf_report.py  main.py
examples/production/02_pr_code_review/: README.md  README_CN.md  __init__.py  config.yaml  main.py
examples/production/03_marketing_content/: README.md  README_CN.md  __init__.py  config.yaml  config_custom.yaml  main.py
examples/production/04_it_support/: README.md  README_CN.md  __init__.py  config.yaml  main.py
examples/production/05_tech_decision/: README.md  README_CN.md  __init__.py  config.yaml  main.py
examples/production/06_code_debugger/: README.md  (+4 more)
src/claude_agent_framework/: __init__.py  agent.py  cli.py  config.py  init.py  session.py
tests/: conftest.py  test_cli.py
tests/business_templates/: __init__.py  test_business_templates.py
tests/config/: test_config.py
tests/core/: test_prompt.py  test_roles.py
tests/dynamic/: __init__.py  test_dynamic.py
tests/metrics/: __init__.py  test_metrics.py
tests/observability/: test_observability.py
tests/plugins/: test_base.py  test_builtin_plugins.py
utils/: __init__.py  message_handler.py  tracker.py
(+185 files in other folders)
