[project]
name = "claude-agent-framework"
version = "0.3.0"
description = "A production-ready multi-agent orchestration framework built on Claude Agent SDK. Design, compose, and deploy complex AI workflows with pre-built architecture patterns."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Jiangwen Su", email = "uukuguy@gmail.com" }
]
keywords = ["claude", "agent", "sdk", "multi-agent", "research", "ai", "framework", "architecture"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "claude-agent-sdk>=0.1.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
pdf = [
    "reportlab>=4.0.0",
    "pypdf>=3.0.0",
    "pdfplumber>=0.10.0",
]
charts = [
    "matplotlib>=3.7.0",
    "pandas>=2.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "build>=0.10.0",
    "twine>=4.0.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
]
all = [
    "claude-agent-framework[pdf,charts,dev,docs]",
]

[project.scripts]
claude-agent = "claude_agent_framework.cli:main"

[project.urls]
Homepage = "https://github.com/uukuguy/claude-agent-framework"
Documentation = "https://github.com/uukuguy/claude-agent-framework#readme"
Repository = "https://github.com/uukuguy/claude-agent-framework"
Issues = "https://github.com/uukuguy/claude-agent-framework/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_agent_framework"]

[tool.uv]
# UV package management configuration
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

# Package resolution configuration
package = true
managed = true

[tool.uv.sources]
# Custom source configurations can be added here if needed

[tool.uv.pip]
# Pip compatibility settings
index-strategy = "first-index"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["claude_agent_framework"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
